--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = https://digital-mern-stacks-api.onrender.com
+REACT_APP_API_URL = https://digital-mern-stacks-api.onrender.com/
 REACT_APP_ITEM_PERPAGE = 6
